--- a/styles.scss
+++ b/styles.scss
@@ -75,6 +75,7 @@ $primary: #9356DC;
 $secondary: #FF79DA;
 $tertiary: #99E2D0;
 
+
 a 
 {
 
@@ -278,6 +279,7 @@ header
     display: flex;
     flex-direction: column;
     padding: 0px 3%;
+    gap: 20px 0;
 
     &__restaurant 
     {
@@ -311,46 +313,87 @@ header
         }
       }
 
-      h4 
+      &__bottom-container
       {
-        line-height: 2px;
-        text-indent: 12px;
-      }
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
+        top: -5px;
+        padding: 0 10px;
+        
+        p
+        {
+          position: relative;
+          top: -20px;
+          font-size: 14px;
+        }
 
-      p 
-      {
-        text-align: left;
-        text-indent: 12px;
-        line-height: 2px;
-      }
-      
-    }
+        .heart
+        {
+          display: flex;
+          position: relative;
+          top: -5px;
+          left: -20px;
+          height: 24px;
+          width: 24px;
+          z-index: 1;
+          align-items: center;
+          justify-content: center;
+          transition-duration: 0.6s;
+          transition-timing-function: ease;
 
-    .fa-heart
-    {
-      position: relative;
-      left: calc(100% - 60px);
-      top: -50px;
-      z-index: 1;
-      cursor: pointer;
-      width: 24px;
-      height: 24px;
-      transition-duration: 0.5s;
-      transition-timing-function: ease-in-out;
+          .far
+          {
+            position: relative;
+            align-self: center;
+            left: 12px;
+            z-index: 0;
+            cursor: pointer;
+          }
+          
+          .fas
+          {
+            opacity: 0;
+            position: relative;
+            align-self: center;
+            right: 11.7px;
+            z-index: 0;
+            cursor: pointer;
 
-      &:active
-      {
-        /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
+            /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
 
-        -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
+            -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
 
-        font-weight: 900; /*Without this, only the outline of the heart will be colored*/
+            background-image: linear-gradient($primary, $secondary);  /*Colors the heart*/
+    
+            -webkit-text-fill-color: transparent; /*Makes the transparent color of black the abover color*/
 
-        background-image: linear-gradient($primary, $secondary);  /*Colors the heart*/
+            transition-property: opacity;
 
-        -webkit-text-fill-color: transparent; /*Makes the transparent color of black the abover color*/
-      }
-    }    
+            transition-duration: 0.6s;
+
+            transition-timing-function: ease;
+
+            &:active
+            {
+              opacity: 1;
+            }
+          }
+
+          &:active
+          {
+            /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
+
+            -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
+
+            background-image: linear-gradient($primary, $secondary);  /*Colors the heart*/
+    
+            color: transparent; /*Makes the transparent color of black the abover color*/
+          }
+        }
+      }      
+    }  
   }
 }
 
@@ -653,19 +696,25 @@ footer
   {
     &__restaurants
     {
-      .fa-heart
+      .heart
       {
+        .fas
+        {
+          &:hover
+          {
+            opacity: 1;
+          }
+        }
+
         &:hover
         {
           /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
 
           -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
 
-          font-weight: 900; /*Without this, only the outline of the heart will be colored*/
-
           background-image: linear-gradient($primary, $secondary);  /*Colors the heart*/
-
-          -webkit-text-fill-color: transparent; /*Makes the transparent color of black the abover color*/
+  
+          color: transparent; /*Makes the transparent color of black the abover color*/
         }
       }
     }
