--- a/styles.scss
+++ b/styles.scss
@@ -102,6 +102,20 @@ a
   }
 }
 
+
+/*https://css-tricks.com/box-sizing/ */
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+
+
 body 
 {
   font-family: Roboto;
@@ -212,51 +226,55 @@ header
 
 .howItWorks
 {
-  display: flex;
-  flex-direction: column;
   padding: 0 20px;
 
-  &__option
+  &__options
   {
     display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    background-color: #f6f6f6;
-    font-size: 16px;
-    cursor: pointer;
-    padding: 30px;
-    border-radius: 30px;
-    @include box-shadow;
+    flex-direction: column;
 
-    .material-symbols-sharp 
+    &__option
     {
-      position: relative;
-      left: -20px;
-      color: gray;
-      align-self: center;
-    }
-
-    .material-symbols-sharp--purple 
-    {
-      position: relative;
-      left: -20px;
-      color: $primary;
-      align-self: center;
-    }
-
-    .counter-circle
-    {
-      position: relative;
-      left: -23px;
-      top: 2px;
-      
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      background-color: #f6f6f6;
+      font-size: 16px;
+      cursor: pointer;
+      padding: 30px;
+      border-radius: 30px;
+      @include box-shadow;
+  
       .material-symbols-sharp 
       {
-        color: $primary;
+        position: relative;
+        left: -20px;
+        color: gray;
+        align-self: center;
       }
-      align-self: center;
+  
+      .material-symbols-sharp--purple 
+      {
+        position: relative;
+        left: -20px;
+        color: $primary;
+        align-self: center;
+      }
+  
+      .counter-circle
+      {
+        position: relative;
+        left: -23px;
+        top: 2px;
+        
+        .material-symbols-sharp 
+        {
+          color: $primary;
+        }
+        align-self: center;
+      }
+  
     }
-
   }
 }
 
@@ -279,7 +297,7 @@ header
     display: flex;
     flex-direction: column;
     padding: 0px 3%;
-    gap: 20px 0;
+    gap: 20px;
 
     &__restaurant 
     {
@@ -331,35 +349,29 @@ header
 
         .heart
         {
-          display: flex;
+          display: grid;
           position: relative;
           top: -5px;
-          left: -20px;
+          left: -19px;
           height: 24px;
           width: 24px;
-          z-index: 1;
-          align-items: center;
-          justify-content: center;
-          transition-duration: 0.6s;
-          transition-timing-function: ease;
+          overflow: visible;
 
           .far
           {
-            position: relative;
-            align-self: center;
-            left: 12px;
-            z-index: 0;
+            grid-column: 1;
+            grid-row: 1;
             cursor: pointer;
           }
           
           .fas
           {
             opacity: 0;
-            position: relative;
-            align-self: center;
-            right: 11.7px;
-            z-index: 0;
+            grid-column: 1;
+            grid-row: 1;
             cursor: pointer;
+            height: 25px;
+            width: 25px;
 
             /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
 
@@ -371,7 +383,7 @@ header
 
             transition-property: opacity;
 
-            transition-duration: 0.6s;
+            transition-duration: 3.0s;
 
             transition-timing-function: ease;
 
@@ -380,17 +392,7 @@ header
               opacity: 1;
             }
           }
-
-          &:active
-          {
-            /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
-
-            -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
-
-            background-image: linear-gradient($primary, $secondary);  /*Colors the heart*/
-    
-            color: transparent; /*Makes the transparent color of black the abover color*/
-          }
+          
         }
       }      
     }  
@@ -440,111 +442,117 @@ header
         width: 40px;
         left: 19px;
     }
-
-    &__dish 
+    &__wrapper
     {
       display: flex;
-      align-items: center;
-      margin: 15px;
-      background-color: rgb(255, 255, 255);
-      border-radius: 15px;
-      cursor: pointer;
-      @include box-shadow;
-      overflow: hidden;
+      justify-content: space-between;
+      flex-direction: column;
 
-      &__container 
-      {
-        display: flex;   
-        flex-direction: column;
-        overflow: hidden;
-        padding: 15px 0 15px 10px;
-        flex-basis: 100%;
-        margin-right: -65.6px;
-        transition-property: margin-right;
-        transition-duration: .30s;
-        transition-delay: .01s;
-
-        .main 
-        {
-          font-size: 19px;
-          font-weight: 600;
-        }
-
-        .side 
-        {
-          font-size: 13.5px;
-          text-overflow: ellipsis;
-          white-space:nowrap;
-          overflow: hidden;
-        }
-      }
-
-      
-
-      .cost 
-      {
-        align-self:last baseline;
-        transform: translateX(65.6px);
-        font-size: 13.5px;
-        min-width:35px;
-        padding: 16px 0;
-        margin-right: 17px;
-        margin-left: 6px;
-        transition-property: transform;
-        transition-duration: .30s;
-        transition-delay: .01s;
-        .fa-euro-sign
-        {
-          font-size: 13px;
-        }
-      }
-
-      .selected
+      &__dish 
       {
         display: flex;
         align-items: center;
-        align-self: stretch;
-        padding: 0px 20px;
-        border-top-right-radius: 15px;
-        border-bottom-right-radius: 15px;
-        background: $tertiary;
-        transform: translateX(65.6px);
-        transition-property: transform;
-        transition-duration: .4s;
-        
-
-        .fa-solid
+        margin: 15px;
+        background-color: rgb(255, 255, 255);
+        border-radius: 15px;
+        cursor: pointer;
+        @include box-shadow;
+        overflow: hidden;
+  
+        &__container 
         {
-          &.fa-circle-check
+          display: flex;   
+          flex-direction: column;
+          overflow: hidden;
+          padding: 15px 0 15px 10px;
+          flex-basis: 100%;
+          margin-right: -65.6px;
+          transition-property: margin-right;
+          transition-duration: .30s;
+          transition-delay: .01s;
+  
+          .main 
           {
-            color: #fff;
-            border-radius: 50%;
+            font-size: 19px;
+            font-weight: 600;
+          }
+  
+          .side 
+          {
+            font-size: 13.5px;
+            text-overflow: ellipsis;
+            white-space:nowrap;
+            overflow: hidden;
           }
         }
-      }
-
-      &:active > &__container
-      {
-        margin-right: 0;
-      }
   
-      &:active > .cost
-      {
-        transform: translateX(0);
-      }
-
-      &:active > .selected
-      {
-        transform: translateX(0);
-
-        .fa-solid
+        
+  
+        .cost 
         {
-          &.fa-circle-check
+          align-self:last baseline;
+          transform: translateX(65.6px);
+          font-size: 13.5px;
+          min-width:35px;
+          padding: 15px 0;
+          margin-right: 17px;
+          margin-left: 6px;
+          transition-property: transform;
+          transition-duration: .30s;
+          transition-delay: .01s;
+          .fa-euro-sign
           {
-            animation-name: spin;
-            animation-duration: .4s;
-            animation-delay: .1s;
-            animation-fill-mode: forwards;
+            font-size: 13px;
+          }
+        }
+  
+        .selected
+        {
+          display: flex;
+          align-items: center;
+          align-self: stretch;
+          padding: 0px 20px;
+          border-top-right-radius: 15px;
+          border-bottom-right-radius: 15px;
+          background: $tertiary;
+          transform: translateX(65.6px);
+          transition-property: transform;
+          transition-duration: .4s;
+          
+  
+          .fa-solid
+          {
+            &.fa-circle-check
+            {
+              color: #fff;
+              border-radius: 50%;
+            }
+          }
+        }
+  
+        &:active > &__container
+        {
+          margin-right: 0;
+        }
+    
+        &:active > .cost
+        {
+          transform: translateX(0);
+        }
+  
+        &:active > .selected
+        {
+          transform: translateX(0);
+  
+          .fa-solid
+          {
+            &.fa-circle-check
+            {
+              animation-name: spin;
+              animation-duration: .4s;
+              animation-delay: .1s;
+              animation-fill-mode: forwards;
+            }
           }
         }
       }
@@ -689,33 +697,32 @@ footer
   }
 }
 
-
-@media (min-width: 641px)
+//tablet
+@media (min-width: 640px)
 {
   .restaurants-container
   {
     &__restaurants
     {
-      .heart
+      flex-direction: row;
+      flex-wrap: wrap;
+
+      &__restaurant
       {
-        .fas
+        flex-basis: 48%;
+        gap: 22px 22px;
+
+        .heart
         {
-          &:hover
+          .fas
           {
-            opacity: 1;
+            &:hover
+            {
+              opacity: 1;
+            }
           }
         }
-
-        &:hover
-        {
-          /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
-
-          -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
-
-          background-image: linear-gradient($primary, $secondary);  /*Colors the heart*/
-  
-          color: transparent; /*Makes the transparent color of black the abover color*/
-        }
+        
       }
     }
   }
@@ -724,34 +731,138 @@ footer
   {
     &__dishes
     {
-      &__dish
+      &__wrapper
       {
-        &:hover > &__container
+        flex-direction: row;
+        flex-wrap: wrap;
+     
+        &__dish
         {
-          margin-right: 0;
-        }
-  
-        &:hover > .cost
-        {
-          transform: translateX(0);
-        }
-  
-        &:hover > .selected
-        {
-          transform: translateX(0);
-  
-          .fa-solid
+          flex-basis: 45%;
+          height:fit-content;
+
+          &:hover > &__container
           {
-            &.fa-circle-check
+            margin-right: 0;
+          }
+    
+          &:hover > .cost
+          {
+            transform: translateX(0);
+          }
+    
+          &:hover > .selected
+          {
+            transform: translateX(0);
+    
+            .fa-solid
             {
-              animation-name: spin;
-              animation-duration: .4s;
-              animation-delay: .1s;
-              animation-fill-mode: forwards;
+              &.fa-circle-check
+              {
+                animation-name: spin;
+                animation-duration: .4s;
+                animation-delay: .1s;
+                animation-fill-mode: forwards;
+              }
             }
           }
         }
       }
     }
   }
+}
+
+//laptop
+@media (min-width: 1024px)
+{
+  .restaurants-container
+  {
+    &__restaurants
+    {
+      flex-direction: row;
+      justify-content: space-between;
+
+      &__restaurant
+      {
+        flex-basis: 30%;
+      }
+    }
+  }
+
+  .howItWorks
+  {
+    &__options
+    {
+      flex-direction: row;
+      justify-content: space-between;
+
+      &__option
+      {
+        flex-basis: 30%;
+      }
+    }
+  }
+
+  .menu
+  {
+    &__dishes
+    {
+      &__wrapper
+      {
+        &__dish
+        {
+          flex-basis: 30%;
+          height:fit-content;
+        }
+      }
+    }
+  }
+}
+
+//desktop
+@media (min-width: 1280px)
+{
+  .restaurants-container
+  {
+    &__restaurants
+    {
+      flex-direction: row;
+      justify-content: space-between;
+
+      &__restaurant
+      {
+        flex-basis: 23%;
+      }
+    }
+  }
+
+  .howItWorks
+  {
+    &__options
+    {
+      flex-direction: row;
+      justify-content: space-between;
+
+      &__option
+      {
+        flex-basis: 30%;
+      }
+    }
+  }
+
+  .menu
+  {
+    &__dishes
+    {
+      &__wrapper
+      {
+        &__dish
+        {
+          flex-basis: 22%;
+          height:fit-content;
+        }
+      }
+    }
+  }
+
 }
