--- a/styles.css
+++ b/styles.css
@@ -256,14 +256,17 @@ header .fa-arrow-left {
   grid-column: 1;
   grid-row: 1;
   cursor: pointer;
+  height: 24px;
+  width: 24px;
 }
 .restaurants-container__restaurants__restaurant__bottom-container .heart .fas {
   opacity: 0;
   grid-column: 1;
   grid-row: 1;
   cursor: pointer;
-  height: 25px;
-  width: 25px;
+  height: 26px;
+  width: 26px;
+  z-index: 2;
   /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
   -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
   background-image: linear-gradient(#9356DC, #FF79DA); /*Colors the heart*/
