--- a/styles.scss
+++ b/styles.scss
@@ -362,6 +362,8 @@ header
             grid-column: 1;
             grid-row: 1;
             cursor: pointer;
+            height: 24px;
+            width: 24px;
           }
           
           .fas
@@ -370,8 +372,9 @@ header
             grid-column: 1;
             grid-row: 1;
             cursor: pointer;
-            height: 25px;
-            width: 25px;
+            height: 26px;
+            width: 26px;
+            z-index: 2;
 
             /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
 
