--- a/styles.scss
+++ b/styles.scss
@@ -364,6 +364,17 @@ header
             cursor: pointer;
             height: 24px;
             width: 24px;
+
+            transition-property: opacity;
+
+            transition-duration: 3.0s;
+
+            transition-timing-function: ease;
+
+            &:active
+            {
+              opacity: 0;
+            }
           }
           
           .fas
@@ -432,7 +443,8 @@ header
 
   &__dishes
   {
-    opacity: 0;
+    padding-bottom: 15px;
+
     .category 
     {
       text-indent: 20px;
@@ -717,6 +729,14 @@ footer
 
         .heart
         {
+          .far
+          {
+            &:hover
+            {
+              opacity: 0;
+            }
+          }
+
           .fas
           {
             &:hover
