--- a/styles.css
+++ b/styles.css
@@ -271,7 +271,6 @@ header .fa-arrow-left {
   cursor: pointer;
   height: 24px;
   width: 24px;
-  z-index: 2;
   /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
   -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
   background-image: linear-gradient(#9356DC, #FF79DA); /*Colors the heart*/
@@ -325,7 +324,7 @@ header .fa-arrow-left {
 .menu__dishes__wrapper__dish {
   display: flex;
   align-items: center;
-  margin: 15px;
+  margin: 15px 15px 0 15px;
   background-color: rgb(255, 255, 255);
   border-radius: 15px;
   cursor: pointer;
