--- a/styles.scss
+++ b/styles.scss
@@ -31,7 +31,7 @@
   100% { transform: rotate(360deg); }
 }
 
-@keyframes loading
+@keyframes load
 {
   from
   {
@@ -145,7 +145,7 @@ body
     border-radius: 50%;
     border-top: 5px solid green;
     border-bottom: 5px solid red;
-    animation: loading .5s ease infinite;
+    animation: load .5s ease infinite;
   }
 }
 
